追加と訂正

--- a/main/index.html
+++ b/main/index.html
@@ -111,17 +111,21 @@
                 <li>わたくしのことが大嫌いな義弟が護衛騎士になりました 実は溺愛されていたって本当なの!?</li>
                 <li>「死んでみろ」と言われたので死にました。</li>
                 <li>妹に婚約者を取られたら見知らぬ公爵様に求婚されました</li>
+                <li>第七王子に生まれたけど、何すりゃいいの!?</li>
             </ul>
             <p>	少女・女性マンガ</p>
             <ul>
                 <li>元、落ちこぼれ公爵令嬢です。</li>
                 <li>転生した悪役令嬢は復讐を望まない</li>
+                <li>聖女になるので二度目の人生は勝手にさせてもらいます ~王太子は、前世で私を振った恋人でした~</li>
                 <li>メイデーア転生物語</li>
+                <li>第三王子は発行ブツにつき、直視注意!</li>
                 <li>捨てられ男爵令嬢は黒騎士様のお気に入り</li>
-                <li>落ちぶれ才女の幸福</li>
                 <li>成り行きで婚約を申し込んだ弱気貧乏令嬢ですが、なぜか次期公爵様に溺愛されて囚われています</li>
                 <li>婚約破棄された替え玉令嬢、初恋の年上王子に溺愛される</li>
                 <li>茉莉花官吏伝</li>
+                <li>事なかれ令嬢のおいしい契約事情 ~婚約破棄をされたら、王太子殿下とごはん屋をすることになりました!?~</li>
+                <li>王太子殿下は後宮に占い師をご所望です</li>
             </ul>
             <p>悪役令嬢ファンタジー</p>
             <ul>
@@ -136,6 +140,9 @@
                 <li>悪役令嬢?いいえ、極悪令嬢ですわ</li>
                 <li>悪役令嬢、セシリア・シルビィは死にたくないので男装することにした。</li>
                 <li>悪役令嬢、ブラコンにジョブチェンジします</li>
+                <li>転生したら悪役令嬢だったのでヒキニートになります~チートなお父様の溺愛が凄すぎる~</li>
+                <li>残り一日で破滅フラグ全部へし折ります:ざまぁRTA記録24Hr.</li>
+                <li>婚約破棄をした令嬢は我慢を止めました</li>
             </ul>
             <p>学園ファンタジー</p>
             <ul>
