--- a/manga/index.html
+++ b/manga/index.html
@@ -24,9 +24,242 @@
         </ul>
     </nav>
     <main>
-        <h1>MANGA</h1>
+        <h1>漫画</h1>
+        <p>Zero-sumコミックス</p>
         <ul>
-            <li>死神と銀の騎士</li>
+            <li>バトラビッツ</li>
+            <li>悪役令嬢ですが、幸せになってみせますわ! アンソロジーコミック</li>
+            <li>引きこもり令嬢は話のわかる聖獣番</li>
+            <li>悪役令嬢ですが、ヒロインに攻略されてますわ!? アンソロジーコミック</li>
+            <li>悲劇の元凶となる最強外道ラスボス女王破綻のために尽くします。</li>
+            <li>転生したら断罪スタートなんて聞いてませんっ! アンソロジーコミック</li>
+            <li>悪役令嬢ですが、幸せになってみせますわ! アンソロジーコミック ざまぁ編</li>
+            <li>訳あり令嬢でしたが、溺愛されて今では幸せです アンソロジーコミック</li>
+            <li>婚約破棄されましたが、幸せに暮らしておりますわ! アンソロジーコミック</li>
+            <li>救国の聖女ですが、国外通報されちゃいました~!? アンソロジーコミック</li>
+            <li>虐げられ乙女の幸せな嫁入り アンソロジーコミック</li>
+            <li>悪役令嬢が婚約破棄されたので、今から俺が幸せにします。 アンソロジーコミック</li>
+            <li>死に戻り令嬢は、完璧な幸せを手に入れた アンソロジーコミック</li>
+            <li>偽聖女だと言われましsたが、どうやら私が本物のようですよ? アンソロジーコミック</li>
+        </ul>
+        <p>フロースコミック</p>
+        <ul>
+            <li>復讐を誓った白猫は竜王の膝の上で惰眠をむさぼる</li>
+            <li>悪役令嬢は、庶民に嫁ぎたい!!</li>
+            <li>ある日、お姫様になってしまった件について</li>
+            <li>指輪の選んだ婚約者</li>
+            <li>どうでもいいから帰らせてくれ</li>
+            <li>私この度、王国騎士団独身寮の家政婦をすることになりました</li>
+            <li>勇者様の幼馴染という職業の負けヒロインに転生したので、調合師にジョブチェンジします。</li>
+            <li>悪役令嬢は嫌われ貴族に恋をする</li>
+            <li>貴族から庶民になったので、婚約を解消されました!</li>
+            <li>百花宮のお掃除係</li>
+            <li>108回殺された悪役令嬢 すべてを思い出したので、乙女はルビーでキセキします</li>
+            <li>よくあるファンタジー小説でがけっぷち妃として生き残る</li>
+            <li>冒険者の服、作ります! ~異世界で始めるデザイナー生活~</li>
+            <li>後宮妃の管理人</li>
+            <li>婚約破棄の悪意は娼館からお返しします</li>
+            <li>お嬢様がしくじった後</li>
+        </ul>
+        <p>角川コミックス・エース</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>B's Log Comics</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>レジーナコミックス</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>ジャンプコミックス</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>モンスターコミックスf</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>あすかコミックスDX</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>ガンガンコミックスonlin</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>ガンガンコミックスup</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>スクエアコミックス</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>Gファンタジーコミックス</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>アリアンローズコミックス</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>フラワーコミックス</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>花とゆめCOMICS</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>ガンガンコミックスJOKER</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>コロナ・コミックス</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>シリウスKC</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>電撃コミックスNEXT</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>ARIA</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p>ベリーズファンタジー</p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+        <p></p>
+        <ul>
+            <li></li>
         </ul>
     </main>
     <footer class="footer">
