追加と訂正

--- a/light/index.html
+++ b/light/index.html
@@ -52,7 +52,6 @@
             <li>「死んでみろ」と言われたので死にました。</li>
             <li>妹に婚約者を取られたら見知らぬ公爵様に求婚されました</li>
             <li>悪役令嬢なのでラスボスを飼ってみました</li>
-            <li>文豪ストレイドッグス</li>
             <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
             <li>やり直し令嬢は皇帝陛下を攻略中</li>
             <li>落ちぶれ才女の幸福 陛下に棄てられたので、最愛の人を救いに行きます</li>
@@ -71,17 +70,12 @@
         <ul>
             <li>公爵令嬢の嗜み</li>
             <li>狼領主のお嬢様</li>
-            <li>父は英雄、母は精霊、娘の私は転生者</li>
-            <li>大公妃候補だけど、堅実に行こうと思います</li>
             <li>痛いのは嫌なので防御力に極振りしたいと思います</li>
             <li>私はおとなしく消え去ることにします</li>
-            <li>妹に婚約者を譲れと言われました 最強の竜に気に入られてまさかの王国乗っ取り?</li>
-            <li>地味で目立たない私は、今日で終わりにします。</li>
             <li>転生令嬢は冒険者を志す</li>
             <li>悪役令嬢レベル99 ~私は裏ボスですが魔王ではありません~</li>
             <li>悪役令嬢になんかなりません。私は『普通』の公爵令嬢です!</li>
             <li>加護なし令嬢の小さな村 ~さあ、領地運営を始めましょう!~</li>
-            <li>サイレント・ウィッチ 鎮目の魔女の隠しごと</li>
             <li>草魔法師クロエの二度目の人生 自由になって子ドラゴンとレベルMAX薬師ライフ</li>
             <li>家から追い出された私は、隣国のお抱え錬金術師として、幸せな第二の人生を送ることにしました!</li>
             <li>魔術師クノンは見えている</li>
@@ -93,14 +87,11 @@
             <li>(仮)花嫁のやんごとなき事情</li>
             <li>おこぼれ姫と円卓の騎士</li>
             <li>花冠の王国の花嫌い姫</li>
-            <li>茉莉花官吏伝</li>
             <li>月華鬼 緋色の異端者と主従契約</li>
             <li>魔王と勇者に溺愛されて、お手上げです!</li>
             <li>婚約回避のため、声を出さないと決めました!!</li>
-            <li>歴史に残る悪女になるぞ 悪役令嬢になるほど王子の溺愛は加速するようです!</li>
             <li>勿論、慰謝料請求いたします!</li>
             <li>お飾り王妃になったので、こっそり働きに出ることにしました</li>
-            <li>悪役令嬢ルートがないなんて、誰が言ったの？</li>
             <li>弱気MAX令嬢なのに、敏腕婚約者様の賭けに乗ってしまった</li>
             <li>悪役令嬢は夜告鳥を目指す</li>
             <li>身代わり婚約者なのに、銀狼陛下がどうしても離してくれません!</li>
@@ -146,16 +137,11 @@
         </ul>
         <p>TOブックス</p>
         <ul>
-            <li>元公爵令嬢の就職</li>
-            <li>特級ギルドへようこそ! 看板娘の愛されエルフはみんなの心を和ませる</li>
             <li>ヒロイン？聖女？いいえ、オールワークスメイドです(誇)!</li>
-            <li>悪役令嬢ですが攻略対象の様子が異常すぎる</li>
-            <li>運命の番？ならばその赤い糸とやら切り捨てて差し上げましょう</li>
             <li>成り行きで婚約を申し込んだ弱気貧乏令嬢ですが、何故か次期公爵様に溺愛されて囚われています/li>
             <li>元悪役令嬢とS級冒険者のほのぼの街暮らし~不遇なキャラに転生したけど、理想の美女になれたからプラマイゼロだよね~</li>
             <li>恋した人は、妹の代わりに死んでくれと言った。 -妹と結婚した片思い相手がなぜ今更私のもとに?と思ったら-</li>
             <li>婚約破棄された替え玉令嬢、初恋の年上王子に溺愛される</li>
-            <li>断罪された悪役令嬢は、逆行して完璧な悪女を目指す</li>
             <li>たくまし令嬢はへこたれない! ~妹に聖女の座を奪われたけど、騎士団でメイドとして働いています~</li>
             <li>バッドエンド目前のヒロインに転生した私、今世では恋愛するつもりがチートな兄が話してくれません!?</li>
             <li>世界最高の制霊術師~姉たちに虐げられ追放されてしまった私が、実は天才精霊術師だと気づいてももう遅い。私はもふもふと幸せに生きていきます~</li>
@@ -165,7 +151,6 @@
         </ul>
         <p>オーバーラップノベルズf</p>
         <ul>
-            <li>断罪された悪役令嬢は続編の悪役令嬢に生まれ変わる ~無自覚な愛され系は今度こそ破滅を回避します~</li>
             <li>ループ7回目の悪役令嬢は、元敵国で自由気ままな花嫁生活を満喫する</li>
             <li>後宮の雑用姫 山育ちの知恵を駆使して宮廷をリフォームしたり、邪悪なものを狩ったりしていたら、何故か皇帝たちから一目置かれるようになりました~</li>
             <li>悲劇のヒロインぶる妹のせいで婚約破棄したのですが、なぜか正義感の強い王太子に絡まれるようになりました</li>
@@ -181,6 +166,12 @@
         <ul>
             <li>魔導士は平凡を望む</li>
             <li>脇役令嬢に転生しましたがシナリオ通りにはいかせません!</li>
+        </ul>
+        <p>MFブックス</p>
+        <ul>
+            <li>偽聖女!?ミラの冒険譚 ~追放されましたが、実は最強なのでセカンドライフを楽しみます!~</li>
+            <li>亜空の聖女 ~妹にぬれぎぬを着せられた最強魔術師は、正体を隠してやり直す~</li>
+            <li>回復職の悪役令嬢</li>
         </ul>
         <p>ファンタジア文庫</p>
         <ul>
@@ -203,18 +194,14 @@
         </ul>
         <p>富士見L文庫</p>
         <ul>
-            <li>榮国物語 春華とりかえ抄</li>
-            <li>わたしの幸せな結婚</li>
             <li>転生魔女は滅びを告げる</li>
             <li>白豚妃再来伝 後宮も二度目なら</li>
             <li>赤毛のトアと罪の騎士団</li>
         </ul>
         <p>KADOKAWA</p>
         <ul>
-            <li>婚約者は、私の妹に恋をする</li>
             <li>双子の姉が神子として引き取られて、私は捨てられたけど多分私が神子である。</li>
             <li>今度は絶対に邪魔しませんっ!</li>
-            <li>針子の乙女</li>
             <li>国渡りの錬金術師</li>
             <li>闇堕ち聖女は戦渦で舞う</li>
         </ul>
@@ -237,7 +224,6 @@
         </ul>
         <p>SQEXノベル</p>
         <ul>
-            <li>悪役令嬢は溺愛ルートに入りました！？</li>
             <li>家から逃げ家から逃げ出したい私が、うっかり憧れの大魔法使い様を買ってしまったら
             <li>ブラック魔道具師ギルドを追放された私、王宮魔術師として拾われる ~ホワイトな宮廷で、幸せな新生活を始めます!~</li>
             <li>逃がした魚は大きかったが釣り上げた魚が大きすぎた件</li>
@@ -246,8 +232,6 @@
         </ul>
         <p>アース・スターノベル</p>
         <ul>
-            <li>転生した大聖女は、聖女であることをひた隠す</li>
-            <li>転生令嬢が国王陛下に溺愛されるたった一つのワケ</li>
             <li>異世界転移して教師になったが、魔女と恐れられている件 ~王族も貴族も関係ないから真面目に授業を聞け~</li>
             <li>無自覚な天才少女は気付かない ~あらゆる分野で努力しても家族が全く褒めてくれないので、家出して冒険者になりました~</li>
             <li>辺境の貧乏伯爵に嫁ぐことになったので領地改革に励みます</li>
@@ -286,7 +270,6 @@
         <p>ベリーズ文庫</p>
         <ul>
             <li>"自称"人並会社員でしたが、転生したら侍女になりました</li>
-            <li>悪役令嬢って何をすればいいんだっけ~破滅フラグは全力で回避します~</li>
             <li>悪役令嬢ですが、チートが目覚めて溺愛されています</li>
             <li>ループ10回目の公爵令嬢は王太子に溺愛されています</li>
             <li>悪女のレッテルを張られた追放令嬢ですが、最強陛下の溺愛につかまりました</li>
@@ -325,22 +308,14 @@
         </ul>
         <p>サーガフォレスト</p>
         <ul>
-            <li>やり直し転生令嬢はざまぁしたいのに溺愛される</li>
-            <li>悪役令嬢に転生したはずが、主人公よりも溺愛されてるみたいです</li>
         </ul>
         <p>電撃の新文芸</p>
         <ul>
             <li>無能才女は悪女になりたい ~義妹の身代わりで嫁いだ令嬢、公爵様の溺愛に気づかない~</li>
             <li>悪役令嬢の怠惰な溜め息</li>
         </ul>
-        <p>ドラゴンノベルス</p>
-        <ul>
-            <li>怨獄の薔薇姫 政治の都合で殺されましたが最強のアンデッドとして蘇りました/li>
-            <li>虐げられし令嬢は、世界樹の主になりました ~もふもふな精霊たちに気に入られたみたいです~</li>
-        </ul>
         <p>その他</p>
         <ul>
-            <li>薬屋のひとりごと</li>
             <li>学戦都市アスタリスク</li>
             <li>鬼の花嫁</li>
             <li>結城友奈は勇者である 勇者史外典</li>
@@ -348,17 +323,20 @@
             <li>盲目の織姫は後宮で皇帝との恋を紡ぐ</li>
             <li>後宮の烏</li>
             <li>結界師の一輪華</li>
+            <li>怨獄の薔薇姫 政治の都合で殺されましたが最強のアンデッドとして蘇りました</li>
             <li>婚約者が浮気相手と駆け落ちしました。王子殿下に溺愛されて幸せなので、今さら戻りたいと言われても困ります。</li>
             <li>もう一度会えたなら、いっぱいの笑顔を望まれぬ花嫁は一途に皇太子を愛す</li>
             <li>転生バッドエンド令嬢は、ヤンデレ王子の溺愛から逃げ出したい</li>
             <li>殿下、ちょっと一言よろしいですか？~無能な悪女だと罵られて婚約破棄されそうですが、その前にあなたの悪事を暴かせていただきますね！~</li>
             <li>万能女中コニー・ヴィレ</li>
+            <li>やり直し転生令嬢はざまぁしたいのに溺愛される</li>
+            <li>『魅了』の乙女と堅物筆頭魔術師の初恋記録</li>
             <li>黒狼王と白銀の贄姫 辺境の地で最愛を得る</li>
             <li>真実の愛を見つけたから婚約破棄、ですか。構いませんが、本当にいいんですね?~王太子は眠れない~</li>
             <li>悪役令嬢はオジサマに夢中です</li>
             <li>転生令嬢と数奇な人生を</li>
-            <li>神さま学校の落ちこぼれ</li>
         </ul>
+        <p>など</p>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
