--- a/main/index.html
+++ b/main/index.html
@@ -43,6 +43,7 @@
                 <li>アサシンズプライド</li>
                 <li>超人高校生たちは異世界でも余裕で生き抜くようです</li>
                 <li>失格紋の最強賢者</li>
+                <li>わたしの幸せな結婚</li>
             </ul>
             <p>SF/バトルアクション</p>
             <ul>
@@ -112,6 +113,7 @@
                 <li>「死んでみろ」と言われたので死にました。</li>
                 <li>妹に婚約者を取られたら見知らぬ公爵様に求婚されました</li>
                 <li>第七王子に生まれたけど、何すりゃいいの!?</li>
+                <li>薬屋のひとりごと</li>
             </ul>
             <p>	少女・女性マンガ</p>
             <ul>
@@ -119,13 +121,21 @@
                 <li>転生した悪役令嬢は復讐を望まない</li>
                 <li>聖女になるので二度目の人生は勝手にさせてもらいます ~王太子は、前世で私を振った恋人でした~</li>
                 <li>メイデーア転生物語</li>
+                <li>地味で目立たない私は、今日で終わりにします。</li>
+                <li>針子の乙女</li>
+                <li>大公妃候補だけど、堅実に行こうと思います</li>
                 <li>第三王子は発行ブツにつき、直視注意!</li>
+                <li>妹に婚約者を譲れと言われました 最強の竜に気に入られてまさかの王国乗っ取り?</li>
                 <li>捨てられ男爵令嬢は黒騎士様のお気に入り</li>
                 <li>成り行きで婚約を申し込んだ弱気貧乏令嬢ですが、なぜか次期公爵様に溺愛されて囚われています</li>
                 <li>婚約破棄された替え玉令嬢、初恋の年上王子に溺愛される</li>
                 <li>茉莉花官吏伝</li>
                 <li>事なかれ令嬢のおいしい契約事情 ~婚約破棄をされたら、王太子殿下とごはん屋をすることになりました!?~</li>
                 <li>王太子殿下は後宮に占い師をご所望です</li>
+                <li>特級ギルドへようこそ! 看板娘の愛されエルフはみんなの心を和ませる</li>
+                <li>榮国物語 春華とりかえ抄</li>
+                <li>元公爵令嬢の就職</li>
+                <li>運命の番？ならばその赤い糸とやら切り捨てて差し上げましょう</li>
             </ul>
             <p>悪役令嬢ファンタジー</p>
             <ul>
@@ -140,9 +150,13 @@
                 <li>悪役令嬢?いいえ、極悪令嬢ですわ</li>
                 <li>悪役令嬢、セシリア・シルビィは死にたくないので男装することにした。</li>
                 <li>悪役令嬢、ブラコンにジョブチェンジします</li>
+                <li>断罪された悪役令嬢は続編の悪役令嬢に生まれ変わる ~無自覚な愛され系は今度こそ破滅を回避します~</li>
                 <li>転生したら悪役令嬢だったのでヒキニートになります~チートなお父様の溺愛が凄すぎる~</li>
                 <li>残り一日で破滅フラグ全部へし折ります:ざまぁRTA記録24Hr.</li>
                 <li>婚約破棄をした令嬢は我慢を止めました</li>
+                <li>悪役令嬢って何をすればいいんだっけ~破滅フラグは全力で回避します~</li>
+                <li>悪役令嬢ですが攻略対象の様子が異常すぎる</li>
+                <li>悪役令嬢は溺愛ルートに入りました！？</li>
             </ul>
             <p>学園ファンタジー</p>
             <ul>
@@ -158,6 +172,10 @@
             <p>ファンタジー</p>
             <ul>
                 <li>魔法使いの嫁シリーズ</li>
+                <li>BLEACH</li>
+                <li>ワールドトリガー</li>
+                <li>八犬伝-東方八犬異聞-</li>
+                <li>転生令嬢が国王陛下に溺愛されるたった一つのワケ</li>
                 <li>プランダラ</li>
                 <li>真夜中のオカルト公務員</li>
                 <li>終わりのセラフ</li>
@@ -171,7 +189,9 @@
                 <li>魔法少女まどか☆マギカ</li>
                 <li>聖女の魔力は万能です</li>
                 <li>異世界はスマートフォンとともに</li>
+                <li>虐げられし令嬢は、世界樹の主になりました ~もふもふな精霊たちに気に入られたみたいです~</li>
                 <li>ありふれた職業で世界最強</li>
+                <li>ツンデレ悪役令嬢リーゼロッテと実況の遠藤くんと解説の小林さん</li>
             </ul>
             <p>ダーク・ファンタジー</p>
             <ul>
@@ -184,6 +204,10 @@
             <p>ファンタジー</p>
             <ul>
                 <li>後宮の烏</li>
+            </ul>
+            <p>スポーツ</p>
+            <ul>
+                <li>ブルーロック</li>
             </ul>
             <p>など</p>
         </section>
