--- a/manga/index.html
+++ b/manga/index.html
@@ -61,206 +61,66 @@
             <li>婚約破棄の悪意は娼館からお返しします</li>
             <li>お嬢様がしくじった後</li>
         </ul>
-        <p>角川コミックス・エース</p>
-        <ul>
-            <li></li>
-        </ul>
         <p>B's Log Comics</p>
         <ul>
-            <li></li>
+            <li>最強の鑑定士って誰のこと? ~満腹ごはんで異世界生活~</li>
+            <li>悪役令嬢は隣国の王太子に溺愛される</li>
+            <li>アルバート家の令嬢は没落をご所望です</li>
+            <li>スキル『台所召喚』はすごい!~異世界でごはん作ってポイント貯めます~</li>
+            <li>屋根裏部屋の公爵夫人</li>
         </ul>
         <p>レジーナコミックス</p>
         <ul>
-            <li></li>
-        </ul>
-        <p>ジャンプコミックス</p>
-        <ul>
-            <li></li>
-        </ul>
-        <p>モンスターコミックスf</p>
-        <ul>
-            <li></li>
-        </ul>
-        <p>あすかコミックスDX</p>
-        <ul>
-            <li></li>
+            <li>異世界で『黒の癒し手』って呼ばれています</li>
+            <li>ダィテス領攻防記</li>
         </ul>
         <p>ガンガンコミックスonlin</p>
         <ul>
-            <li></li>
+            <li>侍女なのに…聖剣を抜いてしまった!</li>
+            <li>乙女ゲーム六周目、オートモードが切れました。</li>
+            <li>悪役令嬢は今日も華麗に暗躍する 追放後も推しのために悪党として支援します!</li>
         </ul>
         <p>ガンガンコミックスup</p>
         <ul>
-            <li></li>
-        </ul>
-        <p>スクエアコミックス</p>
-        <ul>
-            <li></li>
+            <li>左遷された最強賢者、教師になって無敵のクラスを作り上げる</li>
+            <li>悪役令嬢、五度目の人生を邪竜と生きる。 -破滅の邪竜は花嫁を甘やかしたい-</li>
+            <li>聖女のはずが、どうやら乗っ取られました</li>
+            <li>青薔薇姫のやりなおし革命期</li>
         </ul>
         <p>Gファンタジーコミックス</p>
         <ul>
-            <li></li>
-        </ul>
-        <p>アリアンローズコミックス</p>
-        <ul>
-            <li></li>
+            <li>死神と銀の騎士</li>
+            <li>妖怪学校の先生始めました!</li>
+            <li>王宮のトリニティ</li>
+            <li>東京エイリアンズ</li>
         </ul>
         <p>フラワーコミックス</p>
         <ul>
-            <li></li>
+            <li>チョコレート・ヴァンパイア</li>
+            <li>王の獣</li>
         </ul>
-        <p>花とゆめCOMICS</p>
+        <p>花とゆめコミックス</p>
         <ul>
-            <li></li>
+            <li>劉備徳子は静かに暮らしたい</li>
+            <li>琉球のユウナ</li>
+            <li>転生悪女の黒歴史</li>
         </ul>
-        <p>ガンガンコミックスJOKER</p>
+        <p>ジーンピクシブシリーズ</p>
         <ul>
-            <li></li>
+            <li>ナカノヒトゲノム【実況中】</li>
+            <li>花紡ぐ、庇護ノ神</li>
         </ul>
-        <p>コロナ・コミックス</p>
+        <p>その他</p>
         <ul>
-            <li></li>
+            <li>桃組プラス戦記</li>
+            <li>転生王女は今日も旗をたたき折る</li>
+            <li>聖女様?いいえ、通りすがりの魔物使いです!~絶対無敵の聖女はモフモフと旅をする~</li>
+            <li>蝶々事件</li>
+            <li>悪役令嬢は二度目の人生で返り咲く~破滅エンドを回避して、恋も帝位もいただきます~</li>
+            <li>私が聖女?いいえ、悪役令嬢です!~なので、全員破滅は阻止させていただきます~</li>
+            <li>悪役令嬢になりたくないので、王子様と一緒に完璧令嬢を目指します!</li>
         </ul>
-        <p>シリウスKC</p>
-        <ul>
-            <li></li>
-        </ul>
-        <p>電撃コミックスNEXT</p>
-        <ul>
-            <li></li>
-        </ul>
-        <p>ARIA</p>
-        <ul>
-            <li></li>
-        </ul>
-        <p>ベリーズファンタジー</p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
-        <p></p>
-        <ul>
-            <li></li>
-        </ul>
+        <p>など</p>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
