--- a/light/index.html
+++ b/light/index.html
@@ -23,7 +23,7 @@
             <li><a href="../contact/index.html">Contact</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="main">
         <h1>ライトノベル・小説</h1>
         <p>角川スニーカー文庫</p>
         <ul>
