--- a/game/index.html
+++ b/game/index.html
@@ -47,6 +47,7 @@
             <li>崩壊スレータイル</li>
             <li>ダンジョンに出会いを求めるのは間違っているだろうか~メモリア・フレーゼ~</li>
         </ul>
+        <script src="../about-me.js"></script>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
