--- a/main/index.html
+++ b/main/index.html
@@ -211,6 +211,7 @@
             </ul>
             <p>など</p>
         </section>
+        <script src="../about-me.js"></script>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
