--- a/about/index.html
+++ b/about/index.html
@@ -51,6 +51,7 @@
         <ul>
             <li>スマホゲーム</li>
         </ul>
+        <script src="../about-me.js"></script>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
