--- a/anime/index.html
+++ b/anime/index.html
@@ -62,6 +62,7 @@
             <li>Free!</li>
         </ul>
         <p>など</p>
+        <script src="../about-me.js"></script>
     </main>
     <footer></footer>
 </body>
