--- a/contact/index.html
+++ b/contact/index.html
@@ -53,6 +53,7 @@
             </div>
         </div>
         </form>
+        <script src="../about-me.js"></script>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
