--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <p class="setsumei-p">私が気に入っているゲームの紹介</p>
         <h2 class="main-setsumei">Contact</h2>
         <p class="setsumei-p">お問い合わせページ</p>
+    <script src="about-me.js"></script>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
