--- a/light/index.html
+++ b/light/index.html
@@ -337,6 +337,7 @@
             <li>転生令嬢と数奇な人生を</li>
         </ul>
         <p>など</p>
+        <script src="../about-me.js"></script>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
