--- a/manga/index.html
+++ b/manga/index.html
@@ -121,6 +121,7 @@
             <li>悪役令嬢になりたくないので、王子様と一緒に完璧令嬢を目指します!</li>
         </ul>
         <p>など</p>
+        <script src="../about-me.js"></script>
     </main>
     <footer class="footer">
         <address class="footer-address">KTC23A31E0004@edu.kyoto-tech.ac.jp</address>
