--- a/about/index.html
+++ b/about/index.html
@@ -24,14 +24,14 @@
         </ul>
     </nav>
     <main class="main">
-    <h2>名前</h2>
+    <h2 class="mei">名前</h2>
     <p>香川歩美</p>
-    <h2>経歴</h2>
+    <h2 class="reki">経歴</h2>
         <h3>出身地</h3>
         <p>富山県滑川市</p>
         <h3>出身校</h3>
         <p>富山県立富山北部高等学校</p>
-    <h2>趣味</h2>
+    <h2 class="shumi">趣味</h2>
         <h3>読書</h3>
         <ul>
             <li>ライトノベル/小説</li>
