--- a/game/index.html
+++ b/game/index.html
@@ -25,7 +25,8 @@
     </nav>
     <main>
         <h1>ゲーム</h1>
-        <p class="gamea">自分でプレイしているゲーム</p>
+        <div class="gamea"></div>
+        <p>自分でプレイしているゲーム</p>
         <ul>
             <li>アイドリッシュセブン</li>
             <li>刀剣乱舞</li>
@@ -34,7 +35,8 @@
             <li>原神</li>
             <li>TWISTED-WONDERLAND</li>
         </ul>
-        <p class="gameb">実況動画をみるゲーム</p>
+        <div class="gameb"></div>
+        <p>実況動画をみるゲーム</p>
         <ul>
             <li>英雄伝説軌跡シリーズ</li>
             <li>マギアレコード</li>
