--- a/game/index.html
+++ b/game/index.html
@@ -11,6 +11,17 @@
     <header class="header">About me</header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
+    <div class="center slide">
+    <ul class="slideshow">
+        <li><img src="../photo/Idolish7.jpg" alt="gazo1"></li>
+        <li><img src="../photo/bungou.jpg" alt="gazo2"></li>
+        <li><img src="../photo/danmemo.jpg" alt="gazo3"></li>
+        <li><img src="../photo/dankuro.png" alt="gazo4"></li>
+        <li><img src="../photo/genshin.png" alt="gazo5"></li>
+        <li><img src="../photo/genshin2.jpg" alt="gazo6"></li>
+        <li><img src="../photo/genshin3.jpg" alt="gazo7"></li>
+    </ul>
+    </div>
     <nav id="menubar">
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
@@ -33,6 +44,7 @@
             <li>文豪とアルケミスト</li>
             <li>ダンジョンに出会いを求めるのは間違っているだろうか~メモリア・フレーゼ~</li>
             <li>原神</li>
+            <li>崩壊スレータイル</li>
             <li>TWISTED-WONDERLAND</li>
         </ul>
         <div class="gameb"></div>
