--- a/game/index.html
+++ b/game/index.html
@@ -11,7 +11,7 @@
     <header class="header">About me</header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
-    <div class="center slide">
+    <div class="center-slide">
     <ul class="slideshow">
         <li><img src="../photo/Idolish7.jpg" alt="gazo1"></li>
         <li><img src="../photo/bungou.jpg" alt="gazo2"></li>
