--- a/game/index.html
+++ b/game/index.html
@@ -13,13 +13,13 @@
     <lavel for="navToggle" class="btn-burger"></lavel>
     <div class="center-slide">
     <ul class="slideshow">
-        <li><img src="../photo/Idolish7.jpg" alt="gazo1"></li>
-        <li><img src="../photo/bungou.jpg" alt="gazo2"></li>
-        <li><img src="../photo/danmemo.jpg" alt="gazo3"></li>
-        <li><img src="../photo/dankuro.png" alt="gazo4"></li>
-        <li><img src="../photo/genshin.png" alt="gazo5"></li>
-        <li><img src="../photo/genshin2.jpg" alt="gazo6"></li>
-        <li><img src="../photo/genshin3.jpg" alt="gazo7"></li>
+        <li><img class="slide" src="../photo/Idolish7.jpg" alt="gazo1"></li>
+        <li><img class="slide" src="../photo/bungou.jpg" alt="gazo2"></li>
+        <li><img class="slide" src="../photo/danmemo.jpg" alt="gazo3"></li>
+        <li><img class="slide" src="../photo/dankuro.png" alt="gazo4"></li>
+        <li><img class="slide" src="../photo/genshin.png" alt="gazo5"></li>
+        <li><img class="slide" src="../photo/genshin2.jpg" alt="gazo6"></li>
+        <li><img class="slide" src="../photo/genshin3.jpg" alt="gazo7"></li>
     </ul>
     </div>
     <nav id="menubar">
