--- a/game/index.html
+++ b/game/index.html
@@ -12,15 +12,15 @@
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
     <div class="center-slide">
-    <ul class="slideshow">
-        <li><img class="slide" src="../photo/Idolish7.jpg" alt="gazo1"></li>
-        <li><img class="slide" src="../photo/bungou.jpg" alt="gazo2"></li>
-        <li><img class="slide" src="../photo/danmemo.jpg" alt="gazo3"></li>
-        <li><img class="slide" src="../photo/dankuro.png" alt="gazo4"></li>
-        <li><img class="slide" src="../photo/genshin.png" alt="gazo5"></li>
-        <li><img class="slide" src="../photo/genshin2.jpg" alt="gazo6"></li>
-        <li><img class="slide" src="../photo/genshin3.jpg" alt="gazo7"></li>
-    </ul>
+        <div class="slideshow">
+        <img class="slide" src="../photo/Idolish7.jpg" alt="gazo1">
+        <img class="slide" src="../photo/bungou.jpg" alt="gazo2">
+        <img class="slide" src="../photo/danmemo.jpg" alt="gazo3">
+        <img class="slide" src="../photo/dankuro.png" alt="gazo4">
+        <img class="slide" src="../photo/genshin.png" alt="gazo5">
+        <img class="slide" src="../photo/genshin2.jpg" alt="gazo6">
+        <img class="slide" src="../photo/genshin3.jpg" alt="gazo7">
+        </div>
     </div>
     <nav id="menubar">
         <ul class="nav-list">
