--- a/game/index.html
+++ b/game/index.html
@@ -13,9 +13,9 @@
     <lavel for="navToggle" class="btn-burger"></lavel>
     <div class="center-slide">
         <div class="slideshow">
-        <img src="../photo/Idolish7.jpg" class="gazo1">
-        <img src="../photo/danmemo.jpg" class="gazo2">
-        <img src="../photo/genshin3.jpg" class="gazo3">
+        <img class="slide" src="../photo/Idolish7.jpg" alt="gazo1">
+        <img class="slide" src="../photo/danmemo.jpg" alt="gazo2">
+        <img class="slide" src="../photo/genshin3.jpg" alt="gazo3">
         </div>
     </div>
     <nav id="menubar">
