--- a/anime/index.html
+++ b/anime/index.html
@@ -11,6 +11,11 @@
     <header class="header">About me</header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
+    <header class="header">
+        <figure id="mainimg">
+            <img src="../photo/Idolish7.jpg" class="gazo">
+        </figure>
+    </header>
     <nav id="menubar">
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
