--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <figure id="mainimg">
+            <img src="../photo/genshin.png" alt="" class="gazo">
+        </figure>
+    </header>
     <header class="header">自己紹介</header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
