--- a/manga/index.html
+++ b/manga/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <figure id="mainimg">
-            <img src="../photo/sakura_gensou.jpg" alt="" class="gazo">
+            <img src="../photo/sakura_gensou3.webp" alt="" class="gazo">
         </figure>
     </header>
     <header class="header">About me</header>
