--- a/game/index.html
+++ b/game/index.html
@@ -11,11 +11,13 @@
     <header class="header">About me</header>
     <input type="checkbox" name="navToggle" id="navToggle" class="nav-toggle">
     <lavel for="navToggle" class="btn-burger"></lavel>
-    <header class="header">
-        <figure id="mainimg">
-        <img src="../photo/genshin3.jpg" class="gazo">
-        </figure>
-    </header>
+    <div class="center-slide">
+        <div class="slideshow">
+        <img src="../photo/Idolish7.jpg" class="gazo1">
+        <img src="../photo/danmemo.jpg" class="gazo2">
+        <img src="../photo/genshin3.jpg" class="gazo3">
+        </div>
+    </div>
     <nav id="menubar">
         <ul class="nav-list">
             <li><a href="../index.html">Home</a></li>
