--- a/anime/index.html
+++ b/anime/index.html
@@ -13,7 +13,7 @@
     <lavel for="navToggle" class="btn-burger"></lavel>
     <header class="header">
         <figure id="mainimg">
-            <img src="../photo/Idolish7.jpg" class="gazo">
+            <img src="../photo/AYAKA_teaser_logo.webp" class="gazo">
         </figure>
     </header>
     <nav id="menubar">
