--- a/light/index.html
+++ b/light/index.html
@@ -13,7 +13,7 @@
     <lavel for="navToggle" class="btn-burger"></lavel>
     <header class="header">
         <figure id="mainimg">
-            <img src="../photo/danmemo.jpg" class="gazo">
+            <img src="../photo/dankuro.png" class="gazo">
         </figure>
     </header>
     <nav id="menubar">
