--- a/game/index.html
+++ b/game/index.html
@@ -16,6 +16,7 @@
         <img src="../photo/Idolish7.jpg" class="gazo1">
         <img src="../photo/danmemo.jpg" class="gazo2">
         <img src="../photo/genshin3.jpg" class="gazo3">
+        <img src="../photo/bungou.jpg" class="gazo4">
         </div>
     </div>
     <nav id="menubar">
