--- a/game/index.html
+++ b/game/index.html
@@ -17,8 +17,8 @@
         <img src="../photo/danmemo.jpg" class="gazo2">
         <img src="../photo/genshin3.jpg" class="gazo3">
         <img src="../photo/bungou.jpg" class="gazo4">
-        <img src="../photo/dankuro.png" class="gazo5">
-        <img src="../photo/houkai.jpg_large" class="gazo6">
+        <img src="../photo/dankuro.jpg" class="gazo5">
+        <img src="../photo/houkai.jpg" class="gazo6">
         </div>
     </div>
     <nav id="menubar">
