--- a/anime/index.html
+++ b/anime/index.html
@@ -69,6 +69,7 @@
         <p>など</p>
         <script src="../about-me.js"></script>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+    </footer>
 </body>
 </html>
