--- a/about/index.html
+++ b/about/index.html
@@ -36,6 +36,10 @@
         <p>富山県滑川市</p>
         <h3>出身校</h3>
         <p>富山県立富山北部高等学校</p>
+        <h3>所得資格</h3>
+        <p>全国商業高等学校協会 Business License B</p>
+        <p>全国商業高等学校協会 商業経済検定１級</p>
+        <p>日本語ワープロ検定準１級</p>
     <h2 class="shumi">趣味</h2>
         <h3>読書</h3>
         <ul>
